# military-grant-funding-exploration

./: .gitignore  README.md  pyproject.toml
analysis/: cross-reference-checker.ipynb  per_source_funding.ipynb
code/webscraping/: dtic_selenium.py  dtic_selenium_more_details.py  functions.py
military-grant-funding-exploration/webscraping/: dtic_selenium_more_details.py
military_grant_funding_exploration/: constants.py  path_functions.py
military_grant_funding_exploration/webscraping/: DoD_DTIC_scraping.py  UC_award_explorer.py  UC_grant_sponsors.py  dtic-scraping-notebook.ipynb  dtic_selenium.py  dtic_selenium_more_details.py  functions.py
usa-spending-scraping/: campus-uei-codes.csv
usa-spending-scraping/Berkeley-FY-2024-UEI-GS3YEVSS12N6-hash-77d531c18778df3d694b655467b5980e/: Contracts_Subawards_2024-06-05_H06M17S36_1.csv
usa-spending-scraping/Berkeley-FY-All-UEI-GS3YEVSS12N6-hash-a0574ecad788a51a3aca676b7ed77f5d/: Contracts_PrimeAwardSummaries_2024-06-05_H06M28S02_1.csv
usa-spending-scraping/Berkeley-FY2024-USAspendingAwards-hash-77d531c18778df3d694b655467b5980e/: readme.txt
usa-spending-scraping/Berkeley-FYALL-USAspending-hash-a0574ecad788a51a3aca676b7ed77f5d/: Assistance_PrimeAwardSummaries_2024-06-05_H06M28S06_1.csv  Assistance_Subawards_2024-06-05_H06M28S51_1.csv  Contracts_Subawards_2024-06-05_H06M28S09_1.csv
usa-spending-scraping/Davis-FY-All-UEI-TX2DAGQPENZ5-hash-7f89ef23ab53d8dd8745ea21320c04ed/: Assistance_PrimeAwardSummaries_2024-06-05_H07M01S18_1.csv  Assistance_Subawards_2024-06-05_H07M01S42_1.csv  readme.txt.txt
(+36 files in other folders)
